--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "zone.js": "^0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.0",
+    "@angular-devkit/build-angular": "^17.0.0-next.4",
     "@angular-eslint/builder": "16.0.3",
     "@angular-eslint/eslint-plugin": "16.0.3",
     "@angular-eslint/eslint-plugin-template": "16.0.3",
     "@angular-eslint/schematics": "16.0.3",
     "@angular-eslint/template-parser": "16.0.3",
-    "@angular/cli": "^16.2.0-rc.1",
+    "@angular/cli": "^17.0.0-next.4",
     "@angular/compiler-cli": "^17.0.0-next.0",
     "@angular/language-service": "^17.0.0-next.0",
     "@types/express": "^4.17.17",
@@ -52,7 +52,7 @@
     "eslint-plugin-prefer-arrow": "1.2.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "ng-packagr": "^16.0.0",
+    "ng-packagr": "^17.0.0-next.1",
     "prettier": "^2.8.7",
     "ts-node": "^10.8.1",
     "typescript": "^5.0.4"
