--- a/projects/ngx-cookie-service-ssr/package.json
+++ b/projects/ngx-cookie-service-ssr/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngx-cookie-service-ssr",
   "description": "Angular SSR cookie service",
-  "version": "17.0.0-next.0",
+  "version": "17.0.0-next.1",
   "license": "MIT",
   "author": "Stepan Suvorov <stevermeister@gmail.com>",
   "keywords": [
@@ -22,6 +22,8 @@
     "angular-13",
     "angular-14",
     "angular-15",
+    "angular-16",
+    "angular-17",
     "ivy",
     "ivy-compatible",
     "ivy-compilation",
