feat(core): upgrades to angular 17.0.0-next.6

--- a/package.json
+++ b/package.json
@@ -18,43 +18,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0-next.0",
-    "@angular/common": "^17.0.0-next.0",
-    "@angular/compiler": "^17.0.0-next.0",
-    "@angular/core": "^17.0.0-next.0",
-    "@angular/forms": "^17.0.0-next.0",
-    "@angular/platform-browser": "^17.0.0-next.0",
-    "@angular/platform-browser-dynamic": "^17.0.0-next.0",
-    "@angular/router": "^17.0.0-next.0",
+    "@angular/animations": "^17.0.0-next.6",
+    "@angular/common": "^17.0.0-next.6",
+    "@angular/compiler": "^17.0.0-next.6",
+    "@angular/core": "^17.0.0-next.6",
+    "@angular/forms": "^17.0.0-next.6",
+    "@angular/platform-browser": "^17.0.0-next.6",
+    "@angular/platform-browser-dynamic": "^17.0.0-next.6",
+    "@angular/router": "^17.0.0-next.6",
     "@nguniversal/express-engine": "^16.2.0",
     "rxjs": "^7.5.7",
     "tslib": "^2.4.0",
-    "zone.js": "^0.13.0"
+    "zone.js": "^0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0-next.4",
-    "@angular-eslint/builder": "16.0.3",
-    "@angular-eslint/eslint-plugin": "16.0.3",
-    "@angular-eslint/eslint-plugin-template": "16.0.3",
-    "@angular-eslint/schematics": "16.0.3",
-    "@angular-eslint/template-parser": "16.0.3",
-    "@angular/cli": "^17.0.0-next.4",
-    "@angular/compiler-cli": "^17.0.0-next.0",
-    "@angular/language-service": "^17.0.0-next.0",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^18.15.11",
-    "@typescript-eslint/eslint-plugin": "5.59.7",
-    "@typescript-eslint/parser": "5.59.7",
-    "eslint": "^8.40.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsdoc": "41.1.1",
-    "eslint-plugin-prefer-arrow": "1.2.3",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
+    "@angular-devkit/build-angular": "^17.0.0-next.6",
+    "@angular-eslint/builder": "latest",
+    "@angular-eslint/eslint-plugin": "latest",
+    "@angular-eslint/eslint-plugin-template": "latest",
+    "@angular-eslint/schematics": "latest",
+    "@angular-eslint/template-parser": "latest",
+    "@angular/cli": "^17.0.0-next.6",
+    "@angular/compiler-cli": "^17.0.0-next.6",
+    "@angular/language-service": "^17.0.0-next.6",
+    "@types/express": "^4.17.18",
+    "@types/jest": "latest",
+    "@types/node": "latest",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "eslint": "latest",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-jsdoc": "latest",
+    "eslint-plugin-prefer-arrow": "latest",
+    "jest": "latest",
+    "jest-environment-jsdom": "latest",
     "ng-packagr": "^17.0.0-next.1",
-    "prettier": "^2.8.7",
+    "prettier": "latest",
     "ts-node": "^10.8.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.2.2"
   }
 }
