--- a/package.json
+++ b/package.json
@@ -18,29 +18,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0-rc.0",
-    "@angular/common": "^17.0.0-rc.0",
-    "@angular/compiler": "^17.0.0-rc.0",
-    "@angular/core": "^17.0.0-rc.0",
-    "@angular/forms": "^17.0.0-rc.0",
-    "@angular/platform-browser": "^17.0.0-rc.0",
-    "@angular/platform-browser-dynamic": "^17.0.0-rc.0",
-    "@angular/router": "^17.0.0-rc.0",
-    "@angular/ssr": "^17.0.0-next.9",
+    "@angular/animations": "^17.0.0-rc.1",
+    "@angular/common": "^17.0.0-rc.1",
+    "@angular/compiler": "^17.0.0-rc.1",
+    "@angular/core": "^17.0.0-rc.1",
+    "@angular/forms": "^17.0.0-rc.1",
+    "@angular/platform-browser": "^17.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "^17.0.0-rc.1",
+    "@angular/router": "^17.0.0-rc.1",
+    "@angular/ssr": "^17.0.0-rc.2",
     "rxjs": "^7.5.7",
     "tslib": "^2.4.0",
     "zone.js": "^0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0-next.9",
+    "@angular-devkit/build-angular": "^17.0.0-rc.2",
     "@angular-eslint/builder": "latest",
     "@angular-eslint/eslint-plugin": "latest",
     "@angular-eslint/eslint-plugin-template": "latest",
     "@angular-eslint/schematics": "latest",
     "@angular-eslint/template-parser": "latest",
-    "@angular/cli": "^17.0.0-next.9",
-    "@angular/compiler-cli": "^17.0.0-rc.0",
-    "@angular/language-service": "^17.0.0-rc.0",
+    "@angular/cli": "^17.0.0-rc.2",
+    "@angular/compiler-cli": "^17.0.0-rc.1",
+    "@angular/language-service": "^17.0.0-rc.1",
     "@types/express": "^4.17.18",
     "@types/jest": "latest",
     "@types/node": "latest",
