--- a/projects/ngx-cookie-service-ssr/package.json
+++ b/projects/ngx-cookie-service-ssr/package.json
@@ -81,12 +81,12 @@
     "email": "stepan@studytube.nl"
   },
   "peerDependencies": {
-    "@angular/common": "^17.0.0-next.0",
-    "@angular/core": "^17.0.0-next.0",
-    "@nguniversal/express-engine": "^16.2.0"
+    "@angular/common": "^17.0.0-rc.2",
+    "@angular/core": "^17.0.0-rc.2",
+    "@angular/ssr": "^17.0.0-rc.3"
   },
   "dependencies": {
-    "tslib": "^2.0.0"
+    "tslib": "^2.6.2"
   },
   "resolve": {
     "fallback": {
