--- a/projects/ngx-cookie-service/package.json
+++ b/projects/ngx-cookie-service/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngx-cookie-service",
   "description": "Angular cookie service",
-  "version": "17.0.0-rc.1",
+  "version": "17.0.0-rc.2",
   "license": "MIT",
   "author": "Stepan Suvorov <stevermeister@gmail.com>",
   "keywords": [
@@ -81,11 +81,11 @@
     "email": "stepan@studytube.nl"
   },
   "peerDependencies": {
-    "@angular/common": "^17.0.0-next.0",
-    "@angular/core": "^17.0.0-next.0"
+    "@angular/common": "^17.0.0-rc.2",
+    "@angular/core": "^17.0.0-rc.2"
   },
   "dependencies": {
-    "tslib": "^2.0.0"
+    "tslib": "^2.6.2"
   },
   "resolve": {
     "fallback": {
