refactor(core): replaces PNPM with NPM for the time being

--- a/.github/workflows/npm_publish_ssr.yml
+++ b/.github/workflows/npm_publish_ssr.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: 18
       - name: Install NPM Dependencies
-        run: npm install--legacy-peer-deps
+        run: npm i
       - name: Build project
         run: npm build:ngx-cookie-service-ssr
       - name: Publish to NPM registry
