--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
       - name: Install dependencies
-        run: npm i --legacy-peer-deps
+        run: npm i
       - name: Lint
         run: npm run lint
       - name: Format check
