--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: 18
       - name: Install NPM Dependencies
-        run: npm install --legacy-peer-deps
+        run: npm i
       - name: Build project
         run: npm build --configuration=production
       - name: Publish to NPM
