chore: Remove package-lock.json file
The package-lock.json file has been removed from the project. This may result in different dependency versions being installed on different environments, potentially leading to inconsistent behavior across different setups. Future commits should avoid modifying the package-lock.json file unless necessary.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,19 +15,22 @@ jobs:
         node: ['18']
     steps:
       - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: latest
       - name: Use Node.js ${{ matrix.node }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
       - name: Install dependencies
-        run: npm i
+        run: pnpm install --frozen-lockfile
       - name: Lint
-        run: npm run lint
-#      - name: Format check
-#        run: npm run format:check
+        run: pnpm lint
+      - name: Format check
+        run: pnpm format:check
       - name: Build
-        run: npm run build --configuration=production && npm run build:ngx-cookie-service-ssr --configuration=production
+        run: pnpm build --configuration=production && pnpm build:ngx-cookie-service-ssr --configuration=production
       - name: Test
-        run: npm run test
+        run: pnpm test
         env:
           CI: true
