--- a/.github/workflows/npm_publish_ssr.yml
+++ b/.github/workflows/npm_publish_ssr.yml
@@ -8,16 +8,19 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: latest
+      - uses: actions/setup-node@v2
         with:
           node-version: 18
-      - name: Install NPM Dependencies
-        run: npm i
+      - name: Install PNPM Dependencies
+        run: pnpm install --frozen-lockfile
       - name: Build project
-        run: npm build:ngx-cookie-service-ssr
+        run: pnpm build:ngx-cookie-service-ssr
       - name: Publish to NPM registry
-        uses: JS-DevTools/npm-publish@v3
+        uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
           package: dist/ngx-cookie-service-ssr/package.json
