chore(core): updates browserlist

--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
     "package": "ng build ngx-cookie-service --prod && cp ./README.md ./dist/ngx-cookie-service && cd dist/ngx-cookie-service && npm pack"
   },
   "private": true,
+  "browserslist": [
+    "last 10 Chrome versions",
+    "last 10 ChromeAndroid versions",
+    "last 10 Firefox versions",
+    "last 10 Edge versions",
+    "last 3 Safari major versions",
+    "last 4 iOS versions"
+  ],
   "dependencies": {
     "@angular/animations": "^17.0.0-rc.2",
     "@angular/common": "^17.0.0-rc.2",
