--- a/package.json
+++ b/package.json
@@ -11,36 +11,36 @@
     "lint": "ng lint ngx-cookie-service",
     "lint:ngx-cookie-service-ssr": "ng lint ngx-cookie-service-ssr",
     "e2e": "ng e2e",
-    "format": "prettier ./projects/**/*.{ts,js,json}",
+    "format": "prettier ./projects/**/*.{ts,json}",
     "format:write": "npm run format -- --write",
     "format:check": "npm run format -- --check",
     "package": "ng build ngx-cookie-service --prod && cp ./README.md ./dist/ngx-cookie-service && cd dist/ngx-cookie-service && npm pack"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0-rc.2",
-    "@angular/common": "^17.0.0-rc.2",
-    "@angular/compiler": "^17.0.0-rc.2",
-    "@angular/core": "^17.0.0-rc.2",
-    "@angular/forms": "^17.0.0-rc.2",
-    "@angular/platform-browser": "^17.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "^17.0.0-rc.2",
-    "@angular/router": "^17.0.0-rc.2",
-    "@angular/ssr": "^17.0.0-rc.3",
+    "@angular/animations": "^17.0.0-rc.3",
+    "@angular/common": "^17.0.0-rc.3",
+    "@angular/compiler": "^17.0.0-rc.3",
+    "@angular/core": "^17.0.0-rc.3",
+    "@angular/forms": "^17.0.0-rc.3",
+    "@angular/platform-browser": "^17.0.0-rc.3",
+    "@angular/platform-browser-dynamic": "^17.0.0-rc.3",
+    "@angular/router": "^17.0.0-rc.3",
+    "@angular/ssr": "^17.0.0-rc.4",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
     "zone.js": "^0.14.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0-rc.3",
+    "@angular-devkit/build-angular": "^17.0.0-rc.4",
     "@angular-eslint/builder": "latest",
     "@angular-eslint/eslint-plugin": "latest",
     "@angular-eslint/eslint-plugin-template": "latest",
     "@angular-eslint/schematics": "latest",
     "@angular-eslint/template-parser": "latest",
-    "@angular/cli": "^17.0.0-rc.3",
-    "@angular/compiler-cli": "^17.0.0-rc.2",
-    "@angular/language-service": "^17.0.0-rc.2",
+    "@angular/cli": "^17.0.0-rc.4",
+    "@angular/compiler-cli": "^17.0.0-rc.3",
+    "@angular/language-service": "^17.0.0-rc.3",
     "@types/express": "^4.17.18",
     "@types/jest": "latest",
     "@types/node": "latest",
