--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -9,13 +9,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: latest
       - uses: actions/setup-node@v2
         with:
           node-version: 18
       - name: Install NPM Dependencies
-        run: npm install --legacy-peer-deps
+        run: pnpm install --frozen-lockfile
       - name: Build project
-        run: npm run build --configuration=production
+        run: pnpm build --configuration=production
       - name: Publish to NPM
         uses: JS-DevTools/npm-publish@v3
         with:
