--- a/package.json
+++ b/package.json
@@ -18,31 +18,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0-rc.3",
-    "@angular/common": "^17.0.0-rc.3",
-    "@angular/compiler": "^17.0.0-rc.3",
-    "@angular/core": "^17.0.0-rc.3",
-    "@angular/forms": "^17.0.0-rc.3",
-    "@angular/platform-browser": "^17.0.0-rc.3",
-    "@angular/platform-browser-dynamic": "^17.0.0-rc.3",
-    "@angular/router": "^17.0.0-rc.3",
-    "@angular/ssr": "^17.0.0-rc.5",
+    "@angular/animations": "^17.0.0",
+    "@angular/common": "^17.0.0",
+    "@angular/compiler": "^17.0.0",
+    "@angular/core": "^17.0.0",
+    "@angular/forms": "^17.0.0",
+    "@angular/platform-browser": "^17.0.0",
+    "@angular/platform-browser-dynamic": "^17.0.0",
+    "@angular/router": "^17.0.0",
+    "@angular/ssr": "^17.0.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
     "zone.js": "^0.14.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0-rc.5",
+    "@angular-devkit/build-angular": "^17.0.0",
     "@angular-eslint/builder": "latest",
     "@angular-eslint/eslint-plugin": "latest",
     "@angular-eslint/eslint-plugin-template": "latest",
     "@angular-eslint/schematics": "latest",
     "@angular-eslint/template-parser": "latest",
-    "@angular/cli": "^17.0.0-rc.5",
-    "@angular/compiler-cli": "^17.0.0-rc.3",
-    "@angular/language-service": "^17.0.0-rc.3",
+    "@angular/cli": "^17.0.0",
+    "@angular/compiler-cli": "^17.0.0",
+    "@angular/language-service": "^17.0.0",
     "@types/express": "^4.17.21",
-    "@types/express-serve-static-core": "^4.17.41",
     "@types/jest": "latest",
     "@types/node": "latest",
     "@typescript-eslint/eslint-plugin": "latest",
@@ -53,7 +52,7 @@
     "eslint-plugin-prefer-arrow": "latest",
     "jest": "latest",
     "jest-environment-jsdom": "latest",
-    "ng-packagr": "^17.0.0-rc.1",
+    "ng-packagr": "^17.0.0",
     "prettier": "latest",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
