--- a/projects/ngx-cookie-service-ssr/package.json
+++ b/projects/ngx-cookie-service-ssr/package.json
@@ -81,9 +81,9 @@
     "email": "stepan@studytube.nl"
   },
   "peerDependencies": {
-    "@angular/common": "^17.0.0-rc.2",
-    "@angular/core": "^17.0.0-rc.2",
-    "@angular/ssr": "^17.0.0-rc.3"
+    "@angular/common": "^17.0.0",
+    "@angular/core": "^17.0.0",
+    "@angular/ssr": "^17.0.0"
   },
   "dependencies": {
     "tslib": "^2.6.2"
