--- a/projects/ngx-cookie-service/package.json
+++ b/projects/ngx-cookie-service/package.json
@@ -81,8 +81,8 @@
     "email": "stepan@studytube.nl"
   },
   "peerDependencies": {
-    "@angular/common": "^17.0.0-rc.2",
-    "@angular/core": "^17.0.0-rc.2"
+    "@angular/common": "^17.0.0",
+    "@angular/core": "^17.0.0"
   },
   "dependencies": {
     "tslib": "^2.6.2"
