--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         run: pnpm format:check
       - name: Build
         run: pnpm build --configuration=production && pnpm build:ngx-cookie-service-ssr --configuration=production
-#      - name: Test
-#        run: pnpm test
-#        env:
-#          CI: true
+      - name: Test
+        run: pnpm test
+        env:
+          CI: true
