--- a/package.json
+++ b/package.json
@@ -63,6 +63,6 @@
     "ng-packagr": "^16.0.0",
     "prettier": "^3.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "~5.1.6"
   }
 }
