feat(ssr): adds server cookie output via response
Resolves #266

--- a/projects/ngx-cookie-service-ssr/package.json
+++ b/projects/ngx-cookie-service-ssr/package.json
@@ -25,6 +25,9 @@
   "contributors": [
     {
       "name": "Pavan Kumar Jadda"
+    },
+    {
+      "name": "Blake Ballard (blakeoxx)"
     }
   ],
   "repository": {
