--- a/package.json
+++ b/package.json
@@ -18,29 +18,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.0-next.3",
-    "@angular/common": "^18.0.0-next.3",
-    "@angular/compiler": "^18.0.0-next.3",
-    "@angular/core": "^18.0.0-next.3",
-    "@angular/forms": "^18.0.0-next.3",
-    "@angular/platform-browser": "^18.0.0-next.3",
-    "@angular/platform-browser-dynamic": "^18.0.0-next.3",
-    "@angular/router": "^18.0.0-next.3",
-    "@angular/ssr": "^18.0.0-next.2",
+    "@angular/animations": "^18.0.0-rc.0",
+    "@angular/common": "^18.0.0-rc.0",
+    "@angular/compiler": "^18.0.0-rc.0",
+    "@angular/core": "^18.0.0-rc.0",
+    "@angular/forms": "^18.0.0-rc.0",
+    "@angular/platform-browser": "^18.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "^18.0.0-rc.0",
+    "@angular/router": "^18.0.0-rc.0",
+    "@angular/ssr": "^18.0.0-rc.1",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
     "zone.js": "^0.14.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.0-next.2",
+    "@angular-devkit/build-angular": "^18.0.0-rc.1",
     "@angular-eslint/builder": "latest",
     "@angular-eslint/eslint-plugin": "latest",
     "@angular-eslint/eslint-plugin-template": "latest",
     "@angular-eslint/schematics": "latest",
     "@angular-eslint/template-parser": "latest",
-    "@angular/cli": "^18.0.0-next.2",
-    "@angular/compiler-cli": "^18.0.0-next.3",
-    "@angular/language-service": "^18.0.0-next.3",
+    "@angular/cli": "^18.0.0-rc.1",
+    "@angular/compiler-cli": "^18.0.0-rc.0",
+    "@angular/language-service": "^18.0.0-rc.0",
     "@types/express": "^4.17.21",
     "@types/jest": "latest",
     "@types/node": "latest",
@@ -52,9 +52,9 @@
     "eslint-plugin-prefer-arrow": "latest",
     "jest": "latest",
     "jest-environment-jsdom": "latest",
-    "ng-packagr": "^18.0.0-next.1",
+    "ng-packagr": "^18.0.0-rc.0",
     "prettier": "latest",
     "ts-node": "^10.9.1",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.5"
   }
 }
