--- a/projects/ngx-cookie-service/package.json
+++ b/projects/ngx-cookie-service/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngx-cookie-service",
   "description": "Angular cookie service",
-  "version": "18.0.0-next.1",
+  "version": "18.0.0-rc.0",
   "license": "MIT",
   "author": "Stepan Suvorov <stevermeister@gmail.com>",
   "keywords": [
@@ -82,8 +82,8 @@
     "email": "stepan@studytube.nl"
   },
   "peerDependencies": {
-    "@angular/common": "^18.0.0-next.3",
-    "@angular/core": "^18.0.0-next.3"
+    "@angular/common": "^18.0.0-rc.0",
+    "@angular/core": "^18.0.0-rc.0"
   },
   "dependencies": {
     "tslib": "^2.6.2"
