feat(ssr): adds server cookie convenience methods

--- a/projects/ngx-cookie-service-ssr/package.json
+++ b/projects/ngx-cookie-service-ssr/package.json
@@ -71,6 +71,9 @@
     },
     {
       "name": "IceBreakerG"
+    },
+    {
+      "name": "Blake Ballard (blakeoxx)"
     }
   ],
   "repository": {
