--- a/package.json
+++ b/package.json
@@ -18,29 +18,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.0",
-    "@angular/common": "^18.0.0",
-    "@angular/compiler": "^18.0.0",
-    "@angular/core": "^18.0.0",
-    "@angular/forms": "^18.0.0",
-    "@angular/platform-browser": "^18.0.0",
-    "@angular/platform-browser-dynamic": "^18.0.0",
-    "@angular/router": "^18.0.0",
-    "@angular/ssr": "^18.0.0",
+    "@angular/animations": "^19.0.0-next.10",
+    "@angular/common": "^19.0.0-next.10",
+    "@angular/compiler": "^19.0.0-next.10",
+    "@angular/core": "^19.0.0-next.10",
+    "@angular/forms": "^19.0.0-next.10",
+    "@angular/platform-browser": "^19.0.0-next.10",
+    "@angular/platform-browser-dynamic": "^19.0.0-next.10",
+    "@angular/router": "^19.0.0-next.10",
+    "@angular/ssr": "^19.0.0-next.12",
     "rxjs": "^7.8.1",
-    "tslib": "^2.6.2",
-    "zone.js": "^0.14.6"
+    "tslib": "^2.8.0",
+    "zone.js": "^0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.0",
+    "@angular-devkit/build-angular": "^19.0.0-next.12",
     "@angular-eslint/builder": "latest",
     "@angular-eslint/eslint-plugin": "latest",
     "@angular-eslint/eslint-plugin-template": "latest",
     "@angular-eslint/schematics": "latest",
     "@angular-eslint/template-parser": "latest",
-    "@angular/cli": "^18.0.0",
-    "@angular/compiler-cli": "^18.0.0",
-    "@angular/language-service": "^18.0.0",
+    "@angular/cli": "^19.0.0-next.12",
+    "@angular/compiler-cli": "^19.0.0-next.10",
+    "@angular/language-service": "^19.0.0-next.10",
     "@types/express": "^4.17.21",
     "@types/jest": "latest",
     "@types/node": "latest",
@@ -52,9 +52,9 @@
     "eslint-plugin-prefer-arrow": "latest",
     "jest": "latest",
     "jest-environment-jsdom": "latest",
-    "ng-packagr": "^18.0.0",
+    "ng-packagr": "^19.0.0-next.6",
     "prettier": "latest",
     "ts-node": "^10.9.1",
-    "typescript": "^5.4.5"
+    "typescript": "^5.6.3"
   }
 }
