--- a/package.json
+++ b/package.json
@@ -18,29 +18,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.0-next.10",
-    "@angular/common": "^19.0.0-next.10",
-    "@angular/compiler": "^19.0.0-next.10",
-    "@angular/core": "^19.0.0-next.10",
-    "@angular/forms": "^19.0.0-next.10",
-    "@angular/platform-browser": "^19.0.0-next.10",
-    "@angular/platform-browser-dynamic": "^19.0.0-next.10",
-    "@angular/router": "^19.0.0-next.10",
-    "@angular/ssr": "^19.0.0-next.12",
+    "@angular/animations": "^19.0.0-rc.0",
+    "@angular/common": "^19.0.0-rc.0",
+    "@angular/compiler": "^19.0.0-rc.0",
+    "@angular/core": "^19.0.0-rc.0",
+    "@angular/forms": "^19.0.0-rc.0",
+    "@angular/platform-browser": "^19.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "^19.0.0-rc.0",
+    "@angular/router": "^19.0.0-rc.0",
+    "@angular/ssr": "^19.0.0-rc.1",
     "rxjs": "^7.8.1",
     "tslib": "^2.8.0",
     "zone.js": "^0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.0-next.12",
+    "@angular-devkit/build-angular": "^19.0.0-rc.1",
     "@angular-eslint/builder": "latest",
     "@angular-eslint/eslint-plugin": "latest",
     "@angular-eslint/eslint-plugin-template": "latest",
     "@angular-eslint/schematics": "latest",
     "@angular-eslint/template-parser": "latest",
-    "@angular/cli": "^19.0.0-next.12",
-    "@angular/compiler-cli": "^19.0.0-next.10",
-    "@angular/language-service": "^19.0.0-next.10",
+    "@angular/cli": "^19.0.0-rc.1",
+    "@angular/compiler-cli": "^19.0.0-rc.0",
+    "@angular/language-service": "^19.0.0-rc.0",
     "@types/express": "^4.17.21",
     "@types/jest": "latest",
     "@types/node": "latest",
