--- a/projects/ngx-cookie-service-ssr/package.json
+++ b/projects/ngx-cookie-service-ssr/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngx-cookie-service-ssr",
   "description": "Angular SSR cookie service",
-  "version": "19.0.0-next.1",
+  "version": "19.0.0-rc.2",
   "license": "MIT",
   "author": "Stepan Suvorov <stevermeister@gmail.com>",
   "keywords": [
@@ -83,9 +83,9 @@
     "email": "stepan@studytube.nl"
   },
   "peerDependencies": {
-    "@angular/common": "^19.0.0-next.10",
-    "@angular/core": "^19.0.0-next.10",
-    "@angular/ssr": "^19.0.0-next.12"
+    "@angular/common": "^19.0.0-rc.0",
+    "@angular/core": "^19.0.0-rc.0",
+    "@angular/ssr": "^19.0.0-rc.0"
   },
   "dependencies": {
     "tslib": "^2.8.0"
