--- a/projects/ngx-cookie-service/package.json
+++ b/projects/ngx-cookie-service/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngx-cookie-service",
   "description": "Angular cookie service",
-  "version": "18.0.0",
+  "version": "19.0.0",
   "license": "MIT",
   "author": "Stepan Suvorov <stevermeister@gmail.com>",
   "keywords": [
@@ -25,6 +25,7 @@
     "angular-16",
     "angular-17",
     "angular-18",
+    "angular-19",
     "ivy",
     "ivy-compatible",
     "ivy-compilation",
@@ -82,11 +83,11 @@
     "email": "stepan@studytube.nl"
   },
   "peerDependencies": {
-    "@angular/common": "^18.0.0-rc.0",
-    "@angular/core": "^18.0.0-rc.0"
+    "@angular/common": "^19.0.0",
+    "@angular/core": "^19.0.0"
   },
   "dependencies": {
-    "tslib": "^2.6.2"
+    "tslib": "^2.8.0"
   },
   "resolve": {
     "fallback": {
