--- a/package.json
+++ b/package.json
@@ -18,42 +18,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.0",
-    "@angular/common": "^19.0.0",
-    "@angular/compiler": "^19.0.0",
-    "@angular/core": "^19.0.0",
-    "@angular/forms": "^19.0.0",
-    "@angular/platform-browser": "^19.0.0",
-    "@angular/platform-browser-dynamic": "^19.0.0",
-    "@angular/router": "^19.0.0",
-    "@angular/ssr": "^19.0.0",
+    "@angular/animations": "^19.1.3",
+    "@angular/common": "^19.1.3",
+    "@angular/compiler": "^19.1.3",
+    "@angular/core": "^19.1.3",
+    "@angular/forms": "^19.1.3",
+    "@angular/platform-browser": "^19.1.3",
+    "@angular/platform-browser-dynamic": "^19.1.3",
+    "@angular/router": "^19.1.3",
+    "@angular/ssr": "^19.1.4",
     "rxjs": "^7.8.1",
     "tslib": "^2.8.0",
     "zone.js": "^0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.0",
-    "@angular-eslint/builder": "latest",
-    "@angular-eslint/eslint-plugin": "latest",
-    "@angular-eslint/eslint-plugin-template": "latest",
-    "@angular-eslint/schematics": "latest",
-    "@angular-eslint/template-parser": "latest",
-    "@angular/cli": "^19.0.0",
-    "@angular/compiler-cli": "^19.0.0",
-    "@angular/language-service": "^19.0.0",
-    "@types/jest": "latest",
-    "@types/node": "latest",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest",
-    "eslint": "latest",
-    "eslint-plugin-import": "latest",
-    "eslint-plugin-jsdoc": "latest",
-    "eslint-plugin-prefer-arrow": "latest",
-    "jest": "latest",
-    "jest-environment-jsdom": "latest",
+    "@angular-eslint/builder": "19.0.2",
+    "@angular-eslint/eslint-plugin": "19.0.2",
+    "@angular-eslint/eslint-plugin-template": "19.0.2",
+    "@angular-eslint/schematics": "19.0.2",
+    "@angular-eslint/template-parser": "19.0.2",
+    "@angular/cli": "^19.1.4",
+    "@angular/compiler-cli": "^19.1.3",
+    "@angular/language-service": "^19.1.3",
+    "@types/jest": "29.5.14",
+    "@types/node": "22.12.0",
+    "@typescript-eslint/eslint-plugin": "8.22.0",
+    "@typescript-eslint/parser": "8.22.0",
+    "eslint": "9.19.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsdoc": "50.6.3",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "ng-packagr": "^19.0.0",
-    "prettier": "latest",
+    "prettier": "3.4.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.3"
   }
 }
