feat: migrate tests from Jest to Jasmine and update related configurations

--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,7 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:jest",
+          "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "projects/ngx-cookie-service/tsconfig.spec.json"
@@ -58,7 +58,7 @@
           "defaultConfiguration": "production"
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:jest",
+          "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "tsConfig": "projects/ngx-cookie-service-ssr/tsconfig.spec.json"
           }
