feat: add Karma configuration and update test scripts for ngx-cookie-service

--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "polyfills": ["zone.js", "zone.js/testing"],
-            "tsConfig": "projects/ngx-cookie-service/tsconfig.spec.json"
+            "tsConfig": "projects/ngx-cookie-service/tsconfig.spec.json",
+            "karmaConfig": "karma.conf.js"
           }
         },
         "lint": {
@@ -60,7 +61,8 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "tsConfig": "projects/ngx-cookie-service-ssr/tsconfig.spec.json"
+            "tsConfig": "projects/ngx-cookie-service-ssr/tsconfig.spec.json",
+            "karmaConfig": "karma.conf.js"
           }
         }
       }
