feat: migrate tests from Jest to Jasmine and update related configurations (#352)
* chore: update Node.js version to 20 and upgrade action versions in CI workflows

* chore: upgrade actions/checkout to version 4 in CodeQL analysis workflow

* feat: migrate tests from Jest to Jasmine and update related configurations

* fix: update cookie regex to escape backslashes in cookie names

* fix: use nullish coalescing for default sameSite value in cookie settings

* fix: update test command to use ChromeHeadless browser for ngx-cookie-service

* feat: add Karma configuration and update test scripts for ngx-cookie-service

* fix: remove ChromeHeadless option from test command for ngx-cookie-service

* fix: update test command to run in ChromeHeadless mode without watch

--- a/angular.json
+++ b/angular.json
@@ -22,10 +22,11 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:jest",
+          "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "polyfills": ["zone.js", "zone.js/testing"],
-            "tsConfig": "projects/ngx-cookie-service/tsconfig.spec.json"
+            "tsConfig": "projects/ngx-cookie-service/tsconfig.spec.json",
+            "karmaConfig": "karma.conf.js"
           }
         },
         "lint": {
@@ -58,9 +59,10 @@
           "defaultConfiguration": "production"
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:jest",
+          "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "tsConfig": "projects/ngx-cookie-service-ssr/tsconfig.spec.json"
+            "tsConfig": "projects/ngx-cookie-service-ssr/tsconfig.spec.json",
+            "karmaConfig": "karma.conf.js"
           }
         }
       }
