--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build ngx-cookie-service",
     "build:ngx-cookie-service-ssr": "ng build ngx-cookie-service-ssr",
-    "test": "ng test ngx-cookie-service",
+    "test": "ng test ngx-cookie-service --watch=false --browsers=ChromeHeadless",
     "test:ngx-cookie-service-ssr": "ng test ngx-cookie-service-ssr",
     "lint": "ng lint ngx-cookie-service",
     "lint:ngx-cookie-service-ssr": "ng lint ngx-cookie-service-ssr",
@@ -41,7 +41,6 @@
     "@angular/cli": "^19.1.4",
     "@angular/compiler-cli": "^19.1.3",
     "@angular/language-service": "^19.1.3",
-    "@types/jest": "29.5.14",
     "@types/node": "22.12.0",
     "@typescript-eslint/eslint-plugin": "8.22.0",
     "@typescript-eslint/parser": "8.22.0",
@@ -49,9 +48,14 @@
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsdoc": "50.6.3",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
-    "ng-packagr": "^19.0.0",
+    "@types/jasmine": "~5.1.0",
+    "jasmine-core": "~5.6.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "ng-packagr": "^20.0.0-rc.0",
     "prettier": "3.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.7.3"
