--- a/package.json
+++ b/package.json
@@ -18,29 +18,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.1.3",
-    "@angular/common": "^19.1.3",
-    "@angular/compiler": "^19.1.3",
-    "@angular/core": "^19.1.3",
-    "@angular/forms": "^19.1.3",
-    "@angular/platform-browser": "^19.1.3",
-    "@angular/platform-browser-dynamic": "^19.1.3",
-    "@angular/router": "^19.1.3",
-    "@angular/ssr": "^19.1.4",
+    "@angular/animations": "^20.0.0",
+    "@angular/common": "^20.0.0",
+    "@angular/compiler": "^20.0.0",
+    "@angular/core": "^20.0.0",
+    "@angular/forms": "^20.0.0",
+    "@angular/platform-browser": "^20.0.0",
+    "@angular/platform-browser-dynamic": "^20.0.0",
+    "@angular/router": "^20.0.0",
+    "@angular/ssr": "^20.0.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.8.0",
     "zone.js": "^0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.0",
     "@angular-eslint/builder": "19.0.2",
     "@angular-eslint/eslint-plugin": "19.0.2",
     "@angular-eslint/eslint-plugin-template": "19.0.2",
     "@angular-eslint/schematics": "19.0.2",
     "@angular-eslint/template-parser": "19.0.2",
-    "@angular/cli": "^19.1.4",
-    "@angular/compiler-cli": "^19.1.3",
-    "@angular/language-service": "^19.1.3",
+    "@angular/build": "^20.0.0",
+    "@angular/cli": "^20.0.0",
+    "@angular/compiler-cli": "^20.0.0",
+    "@angular/language-service": "^20.0.0",
+    "@types/jasmine": "~5.1.0",
     "@types/node": "22.12.0",
     "@typescript-eslint/eslint-plugin": "8.22.0",
     "@typescript-eslint/parser": "8.22.0",
@@ -48,16 +49,15 @@
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsdoc": "50.6.3",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^20.0.0-rc.0",
+    "ng-packagr": "^20.0.0",
     "prettier": "3.4.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.3"
   }
 }
