--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build ngx-cookie-service",
     "build:ngx-cookie-service-ssr": "ng build ngx-cookie-service-ssr",
-    "test": "ng test ngx-cookie-service --watch=false --browsers=ChromeHeadless",
+    "test": "ng test ngx-cookie-service --watch=false",
     "test:ngx-cookie-service-ssr": "ng test ngx-cookie-service-ssr",
     "lint": "ng lint ngx-cookie-service",
     "lint:ngx-cookie-service-ssr": "ng lint ngx-cookie-service-ssr",
@@ -39,24 +39,20 @@
     "@angular/cli": "^21.0.0",
     "@angular/compiler-cli": "^21.0.0",
     "@angular/language-service": "^21.0.0",
-    "@types/jasmine": "~5.1.12",
     "@types/node": "24.9.2",
+    "@vitest/browser-playwright": "^4.0.10",
     "angular-eslint": "20.5.0",
     "eslint": "^9.38.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsdoc": "^61.1.3",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "jasmine-core": "~5.12.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "jsdom": "^27.2.0",
     "ng-packagr": "^21.0.0",
     "prettier": "3.6.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
-    "typescript-eslint": "8.46.2"
+    "typescript-eslint": "8.46.2",
+    "vitest": "^4.0.10"
   }
 }
