chore(workflows): add `--no-frozen-lockfile` to pnpm install commands in CI and publish workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
       - name: Install dependencies
-        run: pnpm i
+        run: pnpm i --no-frozen-lockfile
       - name: Lint
         run: pnpm lint
       - name: Format check
