--- a/.github/workflows/npm_publish_ssr.yml
+++ b/.github/workflows/npm_publish_ssr.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: latest
       - name: Install Dependencies
-        run: pnpm i
+        run: pnpm i --no-frozen-lockfile
       - name: Build project
         run: pnpm build:ngx-cookie-service-ssr
       - name: Publish to NPM registry
