feat(core): adds SSR demo

--- a/angular.json
+++ b/angular.json
@@ -61,6 +61,79 @@
           "builder": "@angular/build:unit-test"
         }
       }
+    },
+    "ngx-cookie-service-ssr-demo": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
+      "root": "projects/ngx-cookie-service-ssr-demo",
+      "sourceRoot": "projects/ngx-cookie-service-ssr-demo/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular/build:application",
+          "options": {
+            "browser": "projects/ngx-cookie-service-ssr-demo/src/main.ts",
+            "tsConfig": "projects/ngx-cookie-service-ssr-demo/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "projects/ngx-cookie-service-ssr-demo/public"
+              }
+            ],
+            "styles": [
+              "projects/ngx-cookie-service-ssr-demo/src/styles.scss"
+            ],
+            "server": "projects/ngx-cookie-service-ssr-demo/src/main.server.ts",
+            "outputMode": "server",
+            "ssr": {
+              "entry": "projects/ngx-cookie-service-ssr-demo/src/server.ts"
+            }
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kB",
+                  "maximumError": "1MB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "4kB",
+                  "maximumError": "8kB"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular/build:dev-server",
+          "configurations": {
+            "production": {
+              "buildTarget": "ngx-cookie-service-ssr-demo:build:production"
+            },
+            "development": {
+              "buildTarget": "ngx-cookie-service-ssr-demo:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "test": {
+          "builder": "@angular/build:unit-test"
+        }
+      }
     }
   },
   "cli": {
