feat(core): adds SSR demo

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start:ssr": "ng serve ngx-cookie-service-ssr-demo",
+    "start:ssr": "ng serve ngx-cookie-service-ssr-demo --port=4203",
     "build": "ng build ngx-cookie-service",
     "build:ngx-cookie-service-ssr": "ng build ngx-cookie-service-ssr",
     "test": "ng test ngx-cookie-service --watch=false",
@@ -24,10 +24,12 @@
   },
   "dependencies": {
     "@angular/animations": "^21.0.6",
+    "@angular/cdk": "~21.1.1",
     "@angular/common": "^21.0.6",
     "@angular/compiler": "^21.0.6",
     "@angular/core": "^21.0.6",
     "@angular/forms": "^21.0.6",
+    "@angular/material": "~21.1.1",
     "@angular/platform-browser": "^21.0.6",
     "@angular/platform-browser-dynamic": "^21.0.6",
     "@angular/platform-server": "^21.0.6",
@@ -42,6 +44,7 @@
     "@angular/cli": "^21.0.4",
     "@angular/compiler-cli": "^21.0.6",
     "@angular/language-service": "^21.0.6",
+    "@angular/material": "21.1.1",
     "@types/express": "^5.0.1",
     "@types/node": "^20.17.19",
     "@vitest/browser-playwright": "^4.0.16",
